src/scss/style.scss
@import "mixins";
@import "variables";

*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: map-get($colours, background);
  font-size: map-get($font-size, small);
}

h1 {
  font-size: map-get($font-size, big);
}

h2 {
  font-size: map-get($font-size, medium);
}

a {
  text-decoration: none;
  color: black;

  &:hover {
    color: black;
  }
}

ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

input {
  border: none;
}

.input-gradient {
  background-image: linear-gradient(right, #ffffff 5%, #e9e9e9 100%);
  background-image: -o-linear-gradient(right, #ffffff 5%, #e9e9e9 100%);
  background-image: -moz-linear-gradient(right, #ffffff 5%, #e9e9e9 100%);
  background-image: -webkit-linear-gradient(right, #ffffff 5%, #e9e9e9 100%);
  background-image: -ms-linear-gradient(right, #ffffff 5%, #e9e9e9 100%);
  border-radius: 6px;
  height: 40px;
  border: 1px solid map-get($colours, background);
  padding-left: 10px;
}

img {
  @include b-radius-3();
}

// nav

.navbar {
  background-color: map-get($colours, primary);

  & a {
    color: white;
  }

  & .navbar-brand {
    color: white;
    & i {
      font-size: 3rem;
    }

    & span {
      font-size: 1.5rem;
    }
  }
}

.nav-link {
  & i {
    font-size: 1.5rem;
  }

  .nav-profile-img {
    height: 2rem;
  }
}

// index

.post-content-input {
  border: 1px solid white;
}

.content-post {
  @include b-radius-3;
}

.post-container {
  background-color: map-get($colours, secondary);
}

.profile-img {
  @include profile-image;
}

.post-img {
  width: 100%;
}

.post-icons {
  font-size: 1.5rem;
  color: map-get($colours, primary);
}

.sign-in-container {
  background-color: map-get($colours, secondary);
}

// profile page

.profile-image {
  height: 70px;
}

.profile-bg {
  background-color: map-get($colours, secondary);
  @include b-radius-3;
}

.contacts-info {
  width: 100%;
}

.scroll-contact {
  overflow-y: scroll;
  max-height: 1050px;
}

@media min-width(600px) {
}

.scroll-inner {
  height: 100%;
}

@media (max-width: 767px) {
  .column-reverse {
    display: flex;
    flex-direction: column-reverse;
  }

  .scroll-contact {
    display: flex;
    flex-direction: row;
    overflow-x: scroll;
  }
}

